Changes
=======

1.3.0 (TBD)
-----------

- WarpedVRT: Remove deprecated dst_* parameters (#2197).
- Building from source now requires Cython (#2016).
- Add GDAL DLL directory to DLL search path on Windows and Python >= 3.8.
  DLLs will be loaded from .libs (for wheels) or from directories in PATH
  environment variable.
- Add version to CRS.to_wkt() for WKT2 support (#2122).

1.2.8 (2021-09-09)
------------------

- Correct for the sense of OCTTransform's return value (#2287).
- Fix a regression in the rasterio.transform module's xy and rowcol functions
  (#2283).

1.2.7 (2021-09-07)
------------------

- CRS objects are now compared to the EPSG authority using OSRFindMatches for
  compatibility with GDAL 3.3.2 (#2279).
- Allow open's fp keyword argument to pass the credential decorator (#2267).
- Fix a copy-paste bug in features.geometry_window() affecting Y-axis padding
  (#2266).
- Note upcoming deprecation of the height and width parameters of
  rasterio.windows.from_bounds() and stop using these parameters in project
  code and tests.
- The transform.xy and transform.rowcol functions now return a pair of
  single-element lists if passed a pair of single-element lists. This was the
  original behavior, but was broken in version 1.2.1 (#2242).

1.2.6 (2021-06-22)
------------------

- Replace the defective 1.2.5 sdist, which had breakpoint in merge.py. This did
  not affect wheels.

1.2.5 (2021-06-21)
------------------

- Change rio-warp to unrotate imagery by default to match gdalwarp (#2125).
- Internal to write() cast int8 arrays to uint8 (#2180).
- Get correct nodata values for complex_int16 data (#2206).
- Prevent merge failures due to window and slicing mismatches (#2204 and
  #2202).

1.2.4 (2021-05-31)
------------------

- Eliminate unneeded marker for CLI nodata options to be ignored. We will stick
  with None (#2191).
- Guard against use of gauss resampling when creating a WarpedVRT (#2190).